# datumaro

./: .coveragerc  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .markdownlint-cli2.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  .remarkrc.js  .remarkrc.js.bak  .travis.yml  3rd-party.txt  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  comparator.ipynb  contributing.md  datum.py  ipas_default.config  json_to_html.py  latest  package-lock.json  package.json.bak  pyproject.toml  pytest.ini  requirements-core.txt  requirements-default.txt  requirements-dev.txt  requirements.txt  searcher_test.ipynb  searcher_test_datumaro_assets.ipynb  searcher_test_server.ipynb  setup.py  stable  table.ipynb  test.py  tox.ini
.ci/: ipas_default.config  trivy-csv.tmpl  trivy-csv.yaml  trivy-json.yaml  trivy.yaml
.github/: CODEOWNERS  codecov.yml  dependabot.yml  pull_request_template.md
.github/workflows/: bandit.yml  code_scan.yml  codeql.yml  coverage.yml  daily_check.yml  docs_latest.yml  isort.yml  (+22 more)
ci/: json_to_html.py
datumaro/: __init__.py  __main__.py  ops.py  project.py  version.py
dev/: pre-commit.py
develop/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/: Makefile  README.md  cli_design.mm  contributing.md  design.md  developer_guide.md  make.bat  mnist_user_manual.md  pascal_voc_user_manual.md  requirements.txt  test_marking.md  user_manual.md
gui/: ABOUTUS.md  README.md  requirements.txt  run.py  streamlit_app.py
notebooks/: 01_merge_multiple_datasets_for_classification.ipynb  02_merge_heterogeneous_datasets_for_detection.ipynb  04_filter.ipynb  05_transform.ipynb  06_data_explorer.ipynb  06_tiling.ipynb  06_validate.ipynb  08_e2e_example_yolo_ultralytics_trainer.ipynb  09_encrypt_dataset.ipynb  10_noisy_label_detection.ipynb  10_noisy_label_detection_cls.ipynb  11_validate.ipynb  12_correct_dataset.ipynb  13_noisy_label_detection_det.ipynb  14_import_export_det_data.ipynb  15_import_export_seg_data.ipynb  16_explain_model_recipro_cam.ipynb  16_prune.ipynb  17_data_pruning.ipynb  18_bbox_to_instance_mask_using_sam.ipynb  19_automatic_instance_mask_gen_using_sam.ipynb  20_kaggle_data_import.ipynb  21_kaggle_data_cleaning.ipynb
rust/: Cargo.toml
rust/src/: annotation.rs  coco_page_mapper.rs  datum_page_mapper.rs  json_section_page_mapper.rs  lib.rs  page_mapper.rs  page_maps.rs  test_helpers.rs  utils.rs
rust/tests/: annotations.rs  coco_page_mapper.rs  datum_page_mapper.rs  json_section_page_mapper.rs
site/: README.md  build_docs.py  config.toml  package-lock.json
source/: conf.py  index.rst  make.bat
test_build/: genindex.html  objects.inv  py-modindex.html
tests/: conftest.py  fixtures.py  requirements-linters.txt  requirements.py  requirements.txt  test_RISE.py  test_ade20_format.py  test_ade20k2017_format.py  test_ade20k2020_format.py  test_ade20k_format.py  test_align_celeba_format.py  test_annotation_util.py  test_api.py  test_brats_format.py  test_brats_numpy_format.py  test_camvid_format.py  test_celeba_format.py  test_cifar_format.py  test_cityscapes_format.py  test_coco_format.py  test_command_targets.py  test_common_segmentation_format.py  test_common_semantic_segmentation_format.py  test_common_super_resolution_format.py  test_config.py  test_corrector.py  test_cvat_format.py  test_dataset.py  test_datumaro_format.py  test_delete_transforms.py  test_diff.py  test_extractor_tfds.py  test_format_detection.py  test_fractal_image_generator.py  test_generator.py  test_icdar_format.py  test_image.py  test_image_dir_format.py  test_image_zip_format.py  test_imagenet_format.py  (+47 more)
v1.10.0rc0/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.2.0/: genindex.html  objects.inv  search.html
v1.2.0rc3/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.2.1/: genindex.html  objects.inv  py-modindex.html  searchindex.js
v1.3.0/: genindex.html  objects.inv  searchindex.js
v1.3.0rc1/: genindex.html  py-modindex.html
v1.3.2/: genindex.html  objects.inv  py-modindex.html  searchindex.js
v1.4.0/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.4.0rc1/: genindex.html  py-modindex.html  search.html  searchindex.js
v1.4.0rc2/: genindex.html  objects.inv  py-modindex.html  searchindex.js
v1.4.0rc3/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.4.0rc4/: genindex.html  py-modindex.html  search.html
v1.4.1/: genindex.html  objects.inv  py-modindex.html  searchindex.js
v1.5.0/: genindex.html  objects.inv  search.html  searchindex.js
v1.5.0rc0/: py-modindex.html
v1.5.0rc2/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.5.1/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.5.1rc1/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.5.1rc2/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.5.1rc3/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.5.1rc4/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.5.2/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.6.0/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.6.0rc0/: genindex.html  objects.inv  py-modindex.html
v1.6.0rc1/: genindex.html  objects.inv  py-modindex.html  searchindex.js
v1.6.1/: genindex.html  objects.inv  py-modindex.html  search.html
v1.6.1rc1/: genindex.html  py-modindex.html
v1.6.1rc2/: genindex.html  py-modindex.html  search.html
v1.6.1rc3/: genindex.html  py-modindex.html  search.html  searchindex.js
v1.7.0/: genindex.html  py-modindex.html  search.html
v1.7.0rc1/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.8.0/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.9.0/: genindex.html  searchindex.js
v1.9.1/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
(+30287 files in other folders)
