[build-system]
requires = ["setuptools", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
forced_separate = ["tests"]
line_length = 100

[tool.coverage.run]
branch = true
# relative_files = true # does not work?

source = [
    "datumaro/",
]

omit = [
    "datumaro/__main__.py",
    "datumaro/version.py",
    "tests/*",
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    'pragma: no cover',

    # Don't complain about missing debug-only code:
    'def __repr__',
    'if\s+[\w\.()]+\.isEnabledFor\(log\.DEBUG\):',

    # Don't complain if tests don't hit defensive assertion code:
    'raise AssertionError',
    'raise NotImplementedError',

    # Don't complain if non-runnable code isn't run:
    'if 0:',
    'if __name__ == .__main__.:',
]

# don't fail on the code that can be found
ignore_errors = true

skip_empty = true

[tool.black]
line-length = 100
target-version = ['py37']

[tool.ruff]
# Enable pydocstyle(`D`), pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["D", "E", "F"]

# Need to review all ignore items below
ignore = [
    # pydocstyle
    "D100",     # Missing docstring in public module
    "D102",     # Missing docstring in public method
    "D103",     # Missing docstring in public function
    "D107",     # Missing docstring in __init__
    "D202",     # No blank lines allowed after function docstring
    "D203",     # 1 blank line required before class docstring
    "D213",     # Multi-line docstring summary should start at the second line
    "D401",     # First line should be in imperative mood; try rephrasing
    "D404",     # First word of the docstring should not be This
    "D406",     # Section name should end with a newline
    "D407",     # Missing dashed underline after section
    "D413",     # Missing blank line after last section
    "D418",     # Methods decorated with @overload shouldn't contain a docstring    
    # pycodestyle
    "E402",     # module-import-not-at-top-of-file
    "E731",     # lambda-assignment
    "E741",     # ambiguous-variable-name
    #Pyflakes
    "F403",     # undefined-local-with-import-star
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

extend-exclude = [
    "datumaro/plugins/openvino_plugin/samples"
]

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# minimum target version
target-version = "py37"

# ignore-init-module-imports = true

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.per-file-ignores]
"__init__.py" = [
    "F401"      # unused-import
]
"datumaro/plugins/data_formats/ava/ava_label_pb2.py" = [
    "E501"      # line-too-long
]

[tool.nbqa.addopts]
ruff = ["--ignore=E402"]
